<resources>
    <string name="app_name">Clear Day \n App</string>

    <string name="splash_base_image">this base image</string>
    <string name="splash_logo_image">logo_image</string>
    <string name="splash_slogan_main">Building Better \n Workplaces </string>
    <string name="splash_slogan_second">Create Your Project And GO!!</string>
    <string name="splash_button_text">Start Now</string>

    <string name="on_board_clear_day_app">Clear Day App</string>
    <string name="on_board_message_one">Let\'s create a\n<b>spase</b> for your\nworkflows.</string>
    <string name="on_board_message_two">Work more\n<b>Structured</b> and\nOrganized👌</string>
    <string name="on_board_message_there">Manage your\n<b>Tasks</b> quickly for\nResults✌</string>
    <string name="on_board_sing_in_you_account">Sing in</string>
    <string name="skip_message">Skip</string>

    <string name="account_sing_in_title_or_button">Sing In</string>
    <string name="account_sing_up_title_or_button">Sing Up</string>
    <string name="account_sing_up_create_account">Create Account</string>
    <string name="account_sing_in_welcome">Welcome Back</string>
    <string name="account_sing_up_hint_to_all_info">Please Inter your Information and\ncreate your account</string>
    <string name="account_sing_in_hint_to_all_info">Please Inter your email address\nand password for Login</string>
    <string name="account_hint_user_name">Enter user name</string>
    <string name="account_hint_email">Enter your Email</string>
    <string name="account_hint_password">Enter your Password</string>
    <string name="account_sing_up_with">Singup with</string>
    <string name="account_sing_in_with">Singin with</string>
    <string name="account_sing_up_have_an_account">Have an Account?</string>
    <string name="account_sing_in_no_have">Not Register Yet?</string>

    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="add">Add</string>

    <string name="project_name">Project Name</string>

    <string name="task_title">Task Title</string>
    <string name="task_description">Task description</string>
    <string name="task_status">status</string>
    <string name="project_description">Project Description</string>
    <string name="project_description_massage">this is project description</string>
    <string name="actions_menu">actions(update/delete/delete all tasks)</string>
    <string name="project_update">Update</string>
    <string name="project_delete">Delete</string>
    <string name="task_add">Add Task</string>
    <string name="project_delete_all_tasks">Delete All Tasks</string>

    <string name="status_closed">Closed</string>
    <string name="status_open">Open</string>
    <string name="no_projects_found">No projects found</string>
    <string name="no_tasks_found">No tasks found</string>
    <string name="enter_name">Please enter project Name</string>
    <string name="enter_project_description">Please enter project Description</string>
    <string name="cancel">Cancel</string>
    <string name="enter_description">Enter description…</string>
    <string name="description">Description</string>
    <string name="enter_title">Enter title…</string>
    <string name="title">Title</string>
    <string name="add_new_item">Add New Item</string>
    <string name="description_cannot_be_empty">⚠ Description cannot be empty</string>
    <string name="title_cannot_be_empty">⚠ Title cannot be empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unknown">Unknown</string>
    <string name="invite_new_people_to_work_together">Invite New People to Work Together</string>
    <string name="invite_now">Invite Now</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="invite_a_new_user">Invite a new user</string>
    <string name="no_pending_invitations">No Pending Invitations</string>
    <string name="current_invitations">Current Invitations</string>
    <string name="accept">Accept</string>
    <string name="edit_task_information">Edit Task Information</string>
    <string name="edit">Edit</string>
    <string name="bee">🐝</string>
    <string name="invalid_request_to_edit">Invalid Request to Edit</string>



</resources>