<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    tools:context=".ui.fragments.account.SingUpFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/account_sing_up_title_or_button"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:src="@drawable/image_account_circle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_sing_up_create_account"
        android:textColor="@color/dark_blue"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/account_sing_up_hint_to_all_info"
        android:textColor="@color/light_gray"
        android:textFontWeight="400"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeColor="@color/purple"
        app:hintTextColor="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_sing_up_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_hint_user_name"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeColor="@color/purple"
        app:hintTextColor="@color/light_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_sing_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeColor="@color/purple"
        app:hintTextColor="@color/light_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_sing_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_hint_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/account_sing_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_account_button"
        android:backgroundTint="@null"
        android:paddingHorizontal="130dp"
        android:text="@string/account_sing_in_title_or_button"
        app:backgroundTint="@null" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layoutDirection="ltr"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/account_sing_in_no_have" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/account_sing_up_sing_in_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/account_sing_up_title_or_button" />
    </LinearLayout>


</LinearLayout>